# mobaku_hdf5_database

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: db_credentials.h  env_reader.h  fifioq.h  hdf5_ops.h  meshid_ops.h
src/: create_hdf5_database_from_pg.c  create_hdf5_for_1st_mesh.c  create_hdf5_from_pg.c  db_credentials.c  env_reader.c  fifioq.c  hdf5_ops.c  meshid_ops.c
tests/: test_hdf5_ops.c  test_meshid_ops.c  test_pg2hdf5Queue.c  test_postgres_connection.c  test_simd.c
